# thalex-quoter

./: .gitignore  BOT_BEHAVIOR.md  LICENSE  README.md  activate.sh  config.py  keys_template.py  not_so_simple_quoter.py  notification_handler.py  pnl.py  pyproject.toml  quoter_logger.py  requirements.txt  test_connection.py  utils.py  volatility_monitor.py  websocket_handler.py
thalex/: thalex.py
