[project]
name = "thalex-quoter"
version = "0.1.0"
authors = [
    {name="Author"},
]
maintainers = [
    {name="Maintainer"},
]
description = "A simple market making bot"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=14.1",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.5",
]


[project.urls]
Homepage = ""
Issues = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "thalex/**/*"
]

[tool.black]
line-length = 90

[tool.setuptools.packages.find]
include = [
    "thalex/**/*"
]
